--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <button class="signup_button hero_text_item">Sign up</button>
             </div>
         </div>
-        <div class="hero_item">
-            <!-- <img src="#" alt="this is a placeholder" class="hero_image"> -->
-            <div class="hero_image">this is placeholder</div>
+        <div class="hero_item hero_item_right">
+            <img src="images/beach.jpg" alt="this is a placeholder" class="hero_image" width="60%">
+            
         </div>
     </div>
 
@@ -53,22 +53,26 @@
 
     <div class="quote">
         <quote class="quote_text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling
-            up space,
-            or maybe people will
-            actually read it. Who knows? All I know is that it looks nice.</quote>
+            up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</quote>
         <strong class="quote_author">-Thor, God of Thunder</strong>
     </div>
 
-    <footer class="dark_background">
-        <div class="footer">
-            <div class="footer_item">
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for out product by clicking that button right over there!</p>
-            </div>
-            <div class="footer_item" align="center">
-                <button class="signup_button" >Sign up</button>
+    <div class="call_to_action">
+        <div class="call_left_item">
+            <div class="call_text">
+                <h3 class="call_maintext">Call to action! It's time!</h3>
+                <p class="call_subtext">Sign up for out product by clicking that button right over there!</p>
             </div>
         </div>
+        <div class="call_right_item">
+            <div class="call_button">
+                <button class="signup_button call_signup_button">Sign up</button>
+            </div>
+        </div>
+    </div>
+
+    <footer class="dark_background">
+        <div class="footer">Copyright &copy; The Odin Project 2021</div>
     </footer>
 
 
